fix scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@
 ::-webkit-scrollbar {
   width: 15px;
 }
+
+::-webkit-scrollbar  {
+  display:none
+}
 ::-webkit-scrollbar-track {
   background-color: black;
 }
